@startuml ERD
!theme plain
title ERD — Ledger (PostgreSQL, schema "public")

skinparam linetype ortho
skinparam entityStyle true
hide circle

entity "users" as users {
  * id : BIGINT <<PK>>
  --
  * email : VARCHAR(255) <<UK>>
  * password_hash : VARCHAR(255)
    first_name : VARCHAR(120)
    last_name : VARCHAR(120)
  * role : VARCHAR(16)
  * status : VARCHAR(16)
  * failed_login_attempts : INTEGER
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
}

entity "wallets" as wallets {
  * id : BIGINT <<PK>>
  --
  * user_id : BIGINT <<FK>>
  * currency : VARCHAR(3)
  * balance : NUMERIC(28,12)
  * status : VARCHAR(16)
  * version : BIGINT
  * created_at : TIMESTAMPTZ
  --
  UK (user_id, currency)
}

entity "transfers" as transfers {
  * id : BIGINT <<PK>>
  --
  * idempotency_key : VARCHAR(64) <<UK>>
  * user_id : BIGINT <<FK>>
    from_wallet_id : BIGINT <<FK>>
    to_wallet_id : BIGINT <<FK>>
  * currency : VARCHAR(3)
  * amount : NUMERIC(28,12)
    converted_amount : NUMERIC(28,12)
    fx_rate : NUMERIC(28,12)
  * fee : NUMERIC(28,12)
  * status : VARCHAR(16)
    error_message : VARCHAR(1000)
  * version : BIGINT
  * created_at : TIMESTAMPTZ
    completed_at : TIMESTAMPTZ
}

entity "payment_transactions" as payments {
  * id : BIGINT <<PK>>
  --
  * idempotency_key : VARCHAR(64) <<UK>>
  * user_id : BIGINT <<FK>>
  * wallet_id : BIGINT <<FK>>
  * type : VARCHAR(16)
  * amount : NUMERIC(28,12)
  * currency : VARCHAR(3)
  * status : VARCHAR(16)
    external_payment_id : VARCHAR(64)
    failure_reason : VARCHAR(1000)
  * attempts : INTEGER
  * version : BIGINT
  * created_at : TIMESTAMPTZ
  * updated_at : TIMESTAMPTZ
}

entity "ledger_entries" as ledger {
  * id : BIGINT <<PK>>
  --
  * wallet_id : BIGINT <<FK>>
    transfer_id : BIGINT <<FK>>
    payment_id : BIGINT <<FK>>
  * entry_type : VARCHAR(8)
  * amount : NUMERIC(28,12)
  * balance_after : NUMERIC(28,12)
  * currency : VARCHAR(3)
    description : VARCHAR(500)
  * operation_key : VARCHAR(120) <<UK per wallet>>
  * created_at : TIMESTAMPTZ
}

entity "exchange_rates" as fx {
  * id : BIGINT <<PK>>
  --
  * base_currency : VARCHAR(3)
  * quote_currency : VARCHAR(3)
  * rate : NUMERIC(28,12)
  * updated_at : TIMESTAMPTZ
  --
  UK (base_currency, quote_currency)
}

entity "outbox_events" as outbox {
  * id : BIGINT <<PK>>
  --
  * aggregate_type : VARCHAR(32)
  * aggregate_id : VARCHAR(64)
  * event_type : VARCHAR(64)
  * payload : JSONB
  * status : VARCHAR(16)
  * attempts : INTEGER
  * available_at : TIMESTAMPTZ
  * created_at : TIMESTAMPTZ
    published_at : TIMESTAMPTZ
  * version : BIGINT
}

' ---------- Relationships ----------

users ||--o{ wallets : "owns"
users ||--o{ transfers : "initiates"
users ||--o{ payments : "requests"

wallets ||--o{ transfers : "sends/receives"
wallets ||--o{ payments : "credited/debited"
wallets ||--o{ ledger : "posted to"

transfers ||--o{ ledger : "generates"
payments ||--o{ ledger : "generates"

@enduml
